[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["Jimmie Lovell <jimmieomlovell@gmail.com>"]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

# See more keys and their definitions at https://dor.rust-lang.org/cargo/reference/manifest.html

[dependencies]
